Update French Language

--- a/MacroDeck/Resources/Languages/French.json
+++ b/MacroDeck/Resources/Languages/French.json
@@ -301,23 +301,23 @@
   "Grid": "Grille",
   "ActionReadVariableFromFile": "Lire la variable du fichier",
   "ActionReadVariableFromFileDescription": "Lit un fichier et définit le contenu comme valeur pour une variable",
-  "ActionSetProfile": "Set profile",
-  "ActionSetProfileDescription": "Sets the profile on a device",
-  "Device": "Device",
-  "WhereExecuted": "Where executed",
-  "ActionSetBrightness": "Set brightness",
-  "ActionSetBrightnessDescription": "Sets the display brightness (Only on the Android app!)",
-  "BindableVariable": "Bindable variable",
-  "BindableVariableInfo": "The state of this button can be bound to the variable {0}. Do you want to bind the state?",
-  "Cancelled": "Cancelled",
-  "Preparing": "Preparing...",
-  "Installing": "Installing...",
-  "Completed": "Completed",
+  "ActionSetProfile": "Changer de profil",
+  "ActionSetProfileDescription": "Définit le profil sur un appareil",
+  "Device": "Appareil",
+  "WhereExecuted": "Où exécuter",
+  "ActionSetBrightness": "Régler la luminosité",
+  "ActionSetBrightnessDescription": "Règle la luminosité de l'écran (uniquement sur l'application Android !)",
+  "BindableVariable": "Variable liable",
+  "BindableVariableInfo": "L'état de ce bouton peut être lié  dans la variable {0}. Voulez-vous les lier ?",
+  "Cancelled": "Annulé",
+  "Preparing": "Préparation...",
+  "Installing": "Installation...",
+  "Completed": "Complété",
   "ExtensionStoreDownloaderPackageIdVersion": "{0} version {1}",
-  "DownloadingAndInstallingXPackages": "Downloading and installing {0} package(s)",
-  "InstallationOfXPackagesDone": "Installation of {0} package(s) done",
-  "ActionSetBackgroundColor": "Set background color",
-  "ActionSetBackgroundColorDescription": "Changes the background color of a action button",
-  "Fixed": "Fixed",
-  "Random": "Random"
+  "DownloadingAndInstallingXPackages": "Téléchargement et installation de {0} packet(s)",
+  "InstallationOfXPackagesDone": "L'installation de {0} packet(s) est terminé",
+  "ActionSetBackgroundColor": "Définir la couleur d'arrière-plan",
+  "ActionSetBackgroundColorDescription": "Change la couleur de l'arrière-plan d'un bouton d'action",
+  "Fixed": "Fixé",
+  "Random": "Aléatoire"
 }
